--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         
     <div class="about-section">
         <div class="image">
-            <img id="image" src="images/minion-transparent-background-13.png" alt="">
+            <img id="image" src="images/groot.png" alt="">
         </div>
         <div class="about">
-        <h1>Banana Talk</h1>
+        <h1>Groot Talk</h1>
         <p>This is for fan of Groot.
             Use this translator to convert your text from English to Groot
         </p>
